--- a/source/makefile
+++ b/source/makefile
@@ -7,16 +7,12 @@ compjac: CompararDocumentsJaccard.cc jaccard.o kshingles.o
 	$(CC) $(CFLAGS) -o compjac CompararDocumentsJaccard.cc jaccard.o kshingles.o
 permutacions: permutacions.cc
 	$(CC) $(CFLAGS) -o permutacions permutacions.cc
-jocProvesJaccard: jocProvesJaccard.cc jaccard.o kshingles.o
-	$(CC) $(CFLAGS) -o jocProvesJaccard jocProvesJaccard.cc jaccard.o kshingles.o
-jocProvesJaccApprox: jocProvesJaccApprox.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
-	$(CC) $(CFLAGS) -o jocProvesJaccApprox jocProvesJaccApprox.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 jocProvesJaccSim: jocProvesJaccSim.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 	$(CC) $(CFLAGS) -o jocProvesJaccSim jocProvesJaccSim.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 jocProvesJaccSimLsh: jocProvesJaccSimLsh.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 	$(CC) $(CFLAGS) -o jocProvesJaccSimLsh jocProvesJaccSimLsh.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
-jocProvesLsh: jocProvesLsh.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
-	$(CC) $(CFLAGS) -o jocProvesLsh jocProvesLsh.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
+jocProvesHashTimes: jocProvesHashTimes.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
+	$(CC) $(CFLAGS) -o jocProvesHashTimes jocProvesHashTimes.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 ModularHash.o: ModularHash.cc
 	$(CC) $(CFLAGS) -c ModularHash.cc
 MultiplicativeHash.o: MultiplicativeHash.cc
