--- a/source/makefile
+++ b/source/makefile
@@ -1,7 +1,7 @@
 CC = g++
 CFLAGS = -std=c++11
 
-default: compjac permutacions jocProvesJaccard jocProvesJaccApprox jocProvesJaccSim jocProvesJaccSimLsh jocProvesLsh
+default: compjac permutacions jocProvesJaccSim jocProvesJaccSimLsh mainDriver
 
 compjac: CompararDocumentsJaccard.cc jaccard.o kshingles.o
 	$(CC) $(CFLAGS) -o compjac CompararDocumentsJaccard.cc jaccard.o kshingles.o
@@ -13,6 +13,8 @@ jocProvesJaccSimLsh: jocProvesJaccSimLsh.cc jaccardaprox.o kshingles.o ModularHa
 	$(CC) $(CFLAGS) -o jocProvesJaccSimLsh jocProvesJaccSimLsh.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 jocProvesHashTimes: jocProvesHashTimes.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 	$(CC) $(CFLAGS) -o jocProvesHashTimes jocProvesHashTimes.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
+mainDriver: mainDriver.cc jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
+	$(CC) $(CFLAGS) -o mainDriver mainDriver.cc jaccard.o jaccardaprox.o kshingles.o ModularHash.o MultiplicativeHash.o MurmurHash3.o
 ModularHash.o: ModularHash.cc
 	$(CC) $(CFLAGS) -c ModularHash.cc
 MultiplicativeHash.o: MultiplicativeHash.cc
@@ -26,4 +28,4 @@ jaccard.o: jaccard.cc
 kshingles.o: kshingles.cc
 	$(CC) $(CFLAGS) -c kshingles.cc
 clean:
-	rm -f *.o compjac permutacions jocProvesJaccard jocProvesJaccApprox jocProvesJaccSim jocProvesJaccSimLsh jocProvesLsh
+	rm -f *.o compjac permutacions jocProvesJaccSim jocProvesJaccSimLsh mainDriver
